--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -240,7 +240,8 @@ img {
 
 .header .header-logo img {
   text-align: center;
-  margin: 0 auto; 
+  margin: 0 auto;
+  width: 42px;
 }
 
 .header .header-logo a {
