--- a/_includes/social.html
+++ b/_includes/social.html
@@ -25,6 +25,12 @@
     </li>
     {% endif %}
 
+    <li>
+        <a title="Viacheslav Korolev on LinkedIn"
+           href="https://ru.linkedin.com/in/korolvs"
+           class="linkedin wc-img-replace" target="_blank">LinkedIn</a>
+    </li>
+
     {% if site.theme.social.github %}
     <li>
         <a title="{{ site.theme.social.github }} on Github" 
